--- a/main.css
+++ b/main.css
@@ -1,63 +1,62 @@
+.title {
+  font-size: 40px;
+}
+
+p {
+  margin-right: 40%;
+}
+
+.content {
+  padding-bottom: 10%;
+  padding-left: 10px;
+}
+
 .ribbon {
-    display: flex;
-    flex-direction: row;
+  flex-direction: row;
+  display: flex;
+  margin-top: 50px;
+  margin-bottom: 10;
 }
 
 .degree {
-    background-color: #535151;
-    color: #CAD2C5;
+  flex-direction: column;
+  padding: 5px;
+  text-align: center;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 24px;
+  background-color: #535151;
+  color: #CAD2C5;
 }
-
 .degree.root {
-    background-color: #3a3939;
+  background-color: #3a3939;
 }
-
+.degree.root .note {
+  text-decoration: underline;
+}
 .degree.zero {
-    background-color: #CAD2C5;
-    color: #2F3E46;
-    font-weight: bold;
+  background-color: #CAD2C5;
+  color: #2F3E46;
+  font-weight: bold;
 }
-
 .degree.one {
-    background-color: #84A98C;
-    color: #2F3E46;
+  background-color: #84A98C;
+  color: #2F3E46;
 }
-
 .degree.two {
-    background-color: #52796F;
-    color: #CAD2C5;
+  background-color: #52796F;
 }
-
 .degree.three {
-    background-color: #354F52;
-    color: #CAD2C5;
+  background-color: #354F52;
 }
-
 .degree.four {
-    background-color: #2F3E46;
-    color: #CAD2C5;
-}
-
-.root > .note {
-    text-decoration: underline;
-}
-
-.degree {
-    flex-direction: column;
-    font-family: 'Courier New', Courier, monospace;
-    text-align: center;
-    padding: 5px;
+  background-color: #2F3E46;
 }
 
 .scale {
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-    gap: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  gap: 5px;
 }
 
-.key {
-}
-
-.interval {
-}
+/*# sourceMappingURL=main.css.map */
