--- a/main.css
+++ b/main.css
@@ -1,5 +1,22 @@
+body {
+  background-color: #e0a49d;
+  color: rgba(0, 0, 0, 0.8);
+}
+
 .title {
   font-size: 40px;
+}
+
+input {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-style: none;
+}
+
+code {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 3px;
+  font-family: "Courier New", Courier, monospace;
+  padding: 0 3px;
 }
 
 p {
@@ -24,11 +41,11 @@ p {
   text-align: center;
   font-family: "Courier New", Courier, monospace;
   font-size: 24px;
-  background-color: #535151;
-  color: #CAD2C5;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #e0a49d;
 }
 .degree.root {
-  background-color: #3a3939;
+  background-color: rgba(0, 0, 0, 0.75);
 }
 .degree.root .note {
   text-decoration: underline;
@@ -44,12 +61,15 @@ p {
 }
 .degree.two {
   background-color: #52796F;
+  color: #CAD2C5;
 }
 .degree.three {
   background-color: #354F52;
+  color: #CAD2C5;
 }
 .degree.four {
   background-color: #2F3E46;
+  color: #CAD2C5;
 }
 
 .scale {
