--- a/main.scss
+++ b/main.scss
@@ -1,18 +1,41 @@
+$peachy: #e0a49d;
 $hint-of-green: #CAD2C5;
 $light-green: #84A98C;
 $green: #52796F;
 $deep-green: #354F52;
 $darkest-green: #2F3E46;
-$gray: #535151;
-$dark-gray: #3a3939;
+// $gray: #535151;
+$gray: #594d4c;
+// $dark-gray: #3a3939;
+$dark-gray: #3b2d2b;
+
+$body-font-color: rgba(0, 0, 0, 0.8);
 
 $light-font-color: $hint-of-green;
 $dark-font-color: $darkest-green;
 
 $mono-font: 'Courier New', Courier, monospace;
+$default-font-size: 16px;
+
+body {
+    background-color: $peachy;
+    color: $body-font-color;
+}
 
 .title {
     font-size: 40px;
+}
+
+input {
+    background-color: rgba(255, 255, 255, 0.8);
+    border-style: none;
+}
+
+code {
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 3px;
+    font-family: $mono-font;
+    padding: 0 3px;
 }
 
 p {
@@ -40,11 +63,11 @@ p {
     font-family: $mono-font;
     font-size: 24px;
 
-    background-color: $gray;
-    color: $light-font-color;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: $peachy;
 
     &.root {
-        background-color: $dark-gray;
+        background-color: rgba(0, 0, 0, 0.75);
         .note {
             text-decoration: underline;
         }
@@ -63,14 +86,17 @@ p {
 
     &.two {
         background-color: $green;
+    color: $light-font-color;
     }
 
     &.three {
         background-color: $deep-green;
+    color: $light-font-color;
     }
 
     &.four {
         background-color: $darkest-green;
+    color: $light-font-color;
     }
 }
 
